log
Tue, May 13, 2025 11:26:15 AM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:66:7: error: implicit declaration of function 'addNode' [-Werror=implicit-function-declaration]
       addNode(list, new_node);
       ^~~~~~~
sudoku.c: In function 'find_first_empty':
sudoku.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
3f0e54c
Tue, May 13, 2025 11:26:59 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'find_first_empty':
sudoku.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
27c562e
Tue, May 13, 2025 11:27:55 AM: 
 sudoku.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
37fa25c
Tue, May 13, 2025 11:30:22 AM: 
 sudoku.c | 23 +++++++++++------------
 1 file changed, 11 insertions(+), 12 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:57:5: error: expected ',' or ';' before 'for'
     for(i=0;i<9;i++){
     ^~~
sudoku.c:57:14: error: statement with no effect [-Werror=unused-value]
     for(i=0;i<9;i++){
             ~^~
sudoku.c:57:20: error: expected ';' before ')' token
     for(i=0;i<9;i++){
                    ^
sudoku.c:57:20: error: expected statement before ')' token
sudoku.c:65:21: error: break statement not within loop or switch
       if(flag == 1) break;
                     ^~~~~
cc1.exe: all warnings being treated as errors
556cc96
Tue, May 13, 2025 11:30:42 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 5/70
df9d51c
Tue, May 13, 2025 11:31:13 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
20f51ce
Tue, May 13, 2025 11:34:03 AM: 
 sudoku.c | 41 ++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 40 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:81:9: error: unused variable 'j' [-Werror=unused-variable]
   int i,j;
         ^
sudoku.c: In function 'is_valid_row':
sudoku.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
07f940c
Tue, May 13, 2025 11:35:27 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:82:9: error: unused variable 'j' [-Werror=unused-variable]
   int i,j;
         ^
cc1.exe: all warnings being treated as errors
fbd0fae
Tue, May 13, 2025 11:36:11 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
897abe9
Tue, May 13, 2025 11:39:05 AM: 
 sudoku.c | 50 +++++++++++++++++++++++++++++---------------------
 1 file changed, 29 insertions(+), 21 deletions(-)
 tests:  5|3
total_score: 35/70
7d1608c
Tue, May 13, 2025 11:42:35 AM: 
 sudoku.c | 24 ++++++++++++------------
 1 file changed, 12 insertions(+), 12 deletions(-)
 tests:  5|3
total_score: 35/70
0197b29
Tue, May 13, 2025 11:42:48 AM: 
 sudoku.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:147:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
12054a6
Tue, May 13, 2025 11:43:00 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
9174255
Tue, May 13, 2025 11:43:35 AM: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
4320ca7
Tue, May 13, 2025 11:45:42 AM: 
 sudoku.c | 26 +++++++++++++++-----------
 1 file changed, 15 insertions(+), 11 deletions(-)
 tests:  0|0
4936432
Tue, May 13, 2025 11:47:26 AM: 
 sudoku.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
 tests:  8|1
total_score: 60/70
9137cd9
Tue, May 13, 2025 11:49:36 AM: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:163:12: error: implicit declaration of function 'length' [-Werror=implicit-function-declaration]
         if(length(adj_nodes) == 0){
            ^~~~~~
cc1.exe: all warnings being treated as errors
fd1b2e1
